; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_neighbour.c_neigh_invalidate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_neighbour.c_neigh_invalidate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.neighbour = type { i64, i32, i32, %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 (%struct.neighbour*, %struct.sk_buff*)* }
%struct.sk_buff = type { i32 }

@res_failed = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"neigh %p is failed.\0A\00", align 1
@jiffies = common dso_local global i32 0, align 4
@NUD_FAILED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.neighbour*)* @neigh_invalidate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @neigh_invalidate(%struct.neighbour* %0) #0 {
  %2 = alloca %struct.neighbour*, align 8
  %3 = alloca %struct.sk_buff*, align 8
  store %struct.neighbour* %0, %struct.neighbour** %2, align 8
  %4 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %5 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %4, i32 0, i32 5
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @res_failed, align 4
  %8 = call i32 @NEIGH_CACHE_STAT_INC(i32 %6, i32 %7)
  %9 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %10 = call i32 @NEIGH_PRINTK2(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), %struct.neighbour* %9)
  %11 = load i32, i32* @jiffies, align 4
  %12 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %13 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %12, i32 0, i32 4
  store i32 %11, i32* %13, align 8
  br label %14

14:                                               ; preds = %27, %1
  %15 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %16 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @NUD_FAILED, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %14
  %21 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %22 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %21, i32 0, i32 1
  %23 = call %struct.sk_buff* @__skb_dequeue(i32* %22)
  store %struct.sk_buff* %23, %struct.sk_buff** %3, align 8
  %24 = icmp ne %struct.sk_buff* %23, null
  br label %25

25:                                               ; preds = %20, %14
  %26 = phi i1 [ false, %14 ], [ %24, %20 ]
  br i1 %26, label %27, label %42

27:                                               ; preds = %25
  %28 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %29 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %28, i32 0, i32 2
  %30 = call i32 @write_unlock(i32* %29)
  %31 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %32 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %31, i32 0, i32 3
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32 (%struct.neighbour*, %struct.sk_buff*)*, i32 (%struct.neighbour*, %struct.sk_buff*)** %34, align 8
  %36 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %37 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %38 = call i32 %35(%struct.neighbour* %36, %struct.sk_buff* %37)
  %39 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %40 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %39, i32 0, i32 2
  %41 = call i32 @write_lock(i32* %40)
  br label %14

42:                                               ; preds = %25
  %43 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %44 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %43, i32 0, i32 1
  %45 = call i32 @skb_queue_purge(i32* %44)
  ret void
}

declare dso_local i32 @NEIGH_CACHE_STAT_INC(i32, i32) #1

declare dso_local i32 @NEIGH_PRINTK2(i8*, %struct.neighbour*) #1

declare dso_local %struct.sk_buff* @__skb_dequeue(i32*) #1

declare dso_local i32 @write_unlock(i32*) #1

declare dso_local i32 @write_lock(i32*) #1

declare dso_local i32 @skb_queue_purge(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
